# keecli

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yaml  test.yaml
keecli/: cli.py  database.py
tests/: conftest.py  test_database.py
tests/dbs/: test_db.kdbx
