[tool.poetry]
name = "keecli"
version = "0.1.0"
description = "KeeCLI is a cli to the password manager KeePass"
authors = ["Leo Perard <leo.perard@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
pykeepass = "^4.0.5"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.284"
mypy = "^1.5.0"
python-semantic-release = "^8.0.6"

[tool.semantic_release]
commit_message = "chore(release): :rocket: {version}"
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
