[tool.poetry]
name = "keecli"
version = "0.2.0"
description = "KeeCLI is a cli to the password manager KeePass"
authors = ["Leo Perard <leo.perard@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.scripts]
keecli = "keecli.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.6"
pykeepass = "^4.0.5"
structlog = "^23.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.0.284"
mypy = "^1.5.0"
python-semantic-release = "^8.0.6"

[tool.semantic_release]
commit_message = "chore(release): :rocket: {version}"
major_on_zero = false
version_toml = [
    "pyproject.toml:tool.poetry.version",
]

[tool.semantic_release.changelog]
changelog_file = "CHANGELOG.md"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
